# ve-urpc

./: CMakeLists.txt  Makefile  Readme.md  init_hook.c  make.inc  ping_vh.c  pingpong.c  pong_ve.c  urpc_common.c  urpc_common.h  urpc_debug.h  urpc_time.h  ve_urpc.c  vh_shm.c  vh_shm.h  vh_urpc.c
aveo/: Makefile  make_aveo.inc
aveo/src/: Command.cpp  Command.hpp  Makefile  ProcHandle.cpp  ProcHandle.hpp  ThreadContext.cpp  ThreadContext.hpp  aveorun.cpp  log.cpp  log.hpp  ve_offload.h  veo_api.cpp  veo_urpc.cpp  veo_urpc.hpp  veo_urpc_ve.cpp  veo_urpc_vh.cpp  veorun.c
aveo/test/: Makefile  bandwidth.c  latency.c  libvehello.c  scan_perf_veo.sh  test_callasync.c  test_callsync.c  test_child1.c  test_child2.c  test_thread_main_call_race.c
cmake/: CMakeLists.txt  FindVEURPC.cmake
src/: CMakeLists.txt  Makefile  dma_handler.c  dma_handler.h  init_hook.c  memory.c  urpc.h  urpc_common.c  urpc_common.h  urpc_debug.h  urpc_time.h  ve_inst.h  ve_urpc.c  vh_shm.c  vh_shm.h  vh_urpc.c
src/ve/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  README.txt  ping_vh.c  pingpong.c  pingpong.h  pong_ve.c  recv_ve.c  send_vh.c  send_vh_e.c  send_vh_t.c  sendrecv.c  sendrecv.h
test/ve/: CMakeLists.txt
veo/: Makefile  ProcHandle.cpp  ProcHandle.hpp  log.cpp  run_test.sh  test_callargs.c  test_callsync.c  test_stackargs.c  test_veo.c  ve_offload.h  veo_api.cpp  veo_urpc.c  veo_urpc.cpp  veo_urpc.h  veorun.c
