CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(VE_URPC VERSION 1.0 LANGUAGES C)

## CMake Stuff -----------------------------------------------------------------
IF(NOT ${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
	MESSAGE(FATAL "Not supported operating system. Only Linux supported!")
ENDIF()

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	GET_FILENAME_COMPONENT(INSTALL_PREFIX "/usr/local/ve/ve_urpc-${PROJECT_VERSION}/" ABSOLUTE)
	SET(CMAKE_INSTALL_PREFIX ${INSTALL_PREFIX} CACHE PATH "CMAKE install path" FORCE)
ENDIF()

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_INSTALL_RPATH "\$ORIGIN")

ADD_LINK_OPTIONS(-Wl,--no-as-needed -Wl,-z,defs)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)